// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|Viewport default 1`] = `
<div
  class="css-9por5e"
>
  I don't have problems being rendered using the default viewport.
</div>
`;

exports[`Storyshots Addons|Viewport.Custom Default (Kindle Fire 2) Inherited 1`] = `
<div
  class="css-9por5e"
>
  I've inherited 
  <b>
    Kindle Fire 2
  </b>
   viewport from my parent.
</div>
`;

exports[`Storyshots Addons|Viewport.Custom Default (Kindle Fire 2) Overridden via "Viewport" component (deprecated) 1`] = `
<div
  class="css-9por5e"
>
  I respect my parents but I should be looking good on 
  <b>
    iPhone 6 Plus
  </b>
  .
</div>
`;

exports[`Storyshots Addons|Viewport.Custom Default (Kindle Fire 2) Overridden via "withViewport" decorator (deprecated) 1`] = `
<div
  class="css-9por5e"
>
  I respect my parents but I should be looking good on 
  <b>
    iPhone 6
  </b>
  .
</div>
`;

exports[`Storyshots Addons|Viewport.Custom Default (Kindle Fire 2) Overridden via "withViewport" parameterized decorator 1`] = `
<div
  class="css-9por5e"
>
  I respect my parents but I should be looking good on 
  <b>
    iPad
  </b>
  .
</div>
`;

exports[`Storyshots Addons|Viewport.withViewport onViewportChange 1`] = `
<div
  class="css-1ruxp1v"
>
  <h1
    class="css-1uk1gs8"
  >
    Select device/viewport
  </h1>
  <dl />
</div>
`;
